kubernetes/templates/api/service.yaml
# https://kubernetes.io/ja/docs/concepts/services-networking/service/
# Podの論理的なセットや、そのPodのセットにアクセスするためのポリシーを定義します
# PodのIPは水平スケーリングや再起動により変化するため、Serviceを利用して安定したアクセスを提供する
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  # どのpodにトラフィックを送るかを決定するためのラベルセレクター
  selector:
    app: fastapi
  type: NodePort
