kubernetes/templates/api/gateway.yaml
# https://kubernetes.io/ja/docs/concepts/services-networking/gateway/
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
